src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_0.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - bar
      - 6
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 7
  fix: ~
  parent: ~

