src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_15.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - fu
      - 1
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 6
  fix: ~
  parent: ~

