src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_16.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - fu
      - 3
  location:
    row: 8
    column: 12
  end_location:
    row: 8
    column: 14
  fix: ~
  parent: ~

