src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_2.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - FU
      - 1
  location:
    row: 1
    column: 26
  end_location:
    row: 1
    column: 35
  fix: ~
  parent: ~

