src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_21.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      name: Sequence
      line: 26
  location:
    row: 32
    column: 4
  end_location:
    row: 32
    column: 12
  fix: ~
  parent:
    row: 30
    column: 0

