src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_3.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - fu
      - 1
  location:
    row: 1
    column: 11
  end_location:
    row: 1
    column: 13
  fix: ~
  parent: ~

