src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_6.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - os
      - 5
  location:
    row: 6
    column: 11
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~

