src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F811_F811_8.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RedefinedWhileUnused:
      - os
      - 4
  location:
    row: 5
    column: 11
  end_location:
    row: 5
    column: 13
  fix: ~
  parent: ~

